# pysqueezebox

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_discovery.py  test_player.py  test_pysqueeze.py  test_remotemeta.py  test_server.py
.github/workflows/: codeql-analysis.yml  publish.yml
pysqueezebox/: __init__.py  const.py  discovery.py  player.py  pysqueezebox.py  server.py
tests/: conftest.py  test_discovery.py  test_integration.py  test_player.py  test_server.py
